--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 
 .classpath
 .classpath
+*.class
+.classpath
+.classpath
+.classpath
+build/classes/it/MadDiscord/Control/LogoutServlet.class
+.classpath
+build/classes/it/MadDiscord/Control/LogoutServlet.class
+build/classes/it/MadDiscord/Control/LogoutServlet.class
+.classpath
+.classpath
