--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 .classpath
 .classpath
+.settings/org.eclipse.jdt.core.prefs
+.settings/org.eclipse.wst.common.project.facet.core.xml
+build/classes/it/MadDiscord/Model/UtenteBean.class
