--- a/.classpath
+++ b/.classpath
@@ -11,6 +11,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mssql-jdbc-8.2.2.jre11.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-13.0.2">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
