--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 build/classes/it/MadDiscord/Model/UtenteBean.class
 build/classes/it/MadDiscord/Database/ShopDAO.class
 build/classes/it/MadDiscord/Model/ShopBean.class
+/bin/
