--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,4 +5,31 @@
     <welcome-file>Homepage.jsp</welcome-file>
   </welcome-file-list>
 
+
+<filter>
+
+<filter-name>httpHeaderSecurity</filter-name>
+<filter-class>org.apache.catalina.filters.HttpHeaderSecurityFilter</filter-class>
+
+	<init-param><param-name>xssProtectionEnabled</param-name><param-value>true</param-value>
+</init-param>
+	<init-param><param-name>antiClickJackingEnabled</param-name><param-value>true</param-value>
+</init-param>
+	<init-param><param-name>antiClickJackingOption</param-name><param-value>DENY</param-value>
+</init-param>
+
+</filter>
+
+<filter-mapping>
+<filter-name>httpHeaderSecurity</filter-name>
+<url-pattern>/*</url-pattern>
+</filter-mapping>
+
+<session-config>
+	<cookie-config>
+		<http-only>true</http-only>
+		<secure>true</secure>
+	</cookie-config>
+</session-config>
+	
 </web-app>
