--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,7 +5,10 @@
     <welcome-file>Homepage.jsp</welcome-file>
   </welcome-file-list>
 	
-	
+	 <error-page>
+        <error-code>404</error-code>
+        <location>/error-404.jsp</location>
+    </error-page>
 	
 
 </web-app>
