--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ build/classes/it/MadDiscord/Database/ShopDAO.class
 build/classes/it/MadDiscord/Model/ShopBean.class
 /bin/
 .settings/org.eclipse.jdt.core.prefs
+src/it/MadDiscord/Model/ShopModelDM.java
+build/classes/it/MadDiscord/Model/ShopModelDM.class
